# tinygrad-generative-ai-tutorial

./: .gitignore  README.md  cifar10-conv.py  cifar10.py  main.py  pyproject.toml  test.py
ar/: pixelcnn_test.py  pixelcnn_train.py
vae/: ae_test.py  ae_train.py  vae_explore.py  vae_test.py  vae_train.py
